[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://scripts/touchpadv2.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/roundButton_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/touchpad_bg.png" type="Texture" id=4]
[ext_resource path="res://scripts/attackpadv2.gd" type="Script" id=5]
[ext_resource path="res://assets/UI/pausebutton.png" type="Texture" id=6]
[ext_resource path="res://scripts/PauseButton.gd" type="Script" id=7]
[ext_resource path="res://scenes/InventorySystem.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 150.0

[node name="gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.119565
margin_top = -2.27206
margin_right = -0.119568
margin_bottom = -2.27209
script = ExtResource( 1 )

[node name="moveButton" type="TouchScreenButton" parent="."]
editor/display_folded = true
position = Vector2( 150, 450 )
shape = SubResource( 1 )
script = ExtResource( 2 )

[node name="buttonSprite" type="Sprite" parent="moveButton"]
visible = false
scale = Vector2( 5, 5 )
z_index = 1
texture = ExtResource( 3 )

[node name="background" type="Sprite" parent="moveButton"]
visible = false
texture = ExtResource( 4 )

[node name="shootButton" type="TouchScreenButton" parent="."]
editor/display_folded = true
position = Vector2( 874, 450 )
shape = SubResource( 1 )
script = ExtResource( 5 )

[node name="buttonSprite" type="Sprite" parent="shootButton"]
visible = false
scale = Vector2( 5, 5 )
z_index = 1
texture = ExtResource( 3 )

[node name="background" type="Sprite" parent="shootButton"]
visible = false
texture = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseButton" type="TextureButton" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -90.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 90.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 6 )
expand = true
script = ExtResource( 7 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/PauseButton"]
scale = Vector2( 5, 5 )
normal = ExtResource( 6 )
pressed = ExtResource( 6 )

[node name="debugLabel" type="Label" parent="CanvasLayer"]
editor/display_folded = true
margin_right = 96.0
margin_bottom = 57.0
text = "(150, 450)"

[node name="Timer" type="Timer" parent="CanvasLayer/debugLabel"]
wait_time = 4096.0
autostart = true

[node name="inventorySystem" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="pressed" from="CanvasLayer/PauseButton/TouchScreenButton" to="CanvasLayer/PauseButton" method="_on_PauseButton_pressed"]
